...
  void Function(int)? onItemTapped;
  int selectedIndex;
  QuizScreenTablet({
    Key? key,
    required this.onItemTapped,
    required this.selectedIndex,
  }) : super(key: const Key("TabletQuizPage"));

  @override
  Widget build(BuildContext context) {
    ImageProvider mic = const AssetImage("assets/images/mic.jpg");
    ImageProvider singer = const AssetImage("assets/images/singer.jpg");
    ImageProvider concert = const AssetImage("assets/images/concert.jpg");
...
    ImageProvider sarabanda = const AssetImage("assets/images/sarabanda.jpg");

    List<Widget> trialGames = [
      Column(
        children: [
          GestureDetector(
            key: const Key("TabletGameA"),
            onTap: () => Navigator.push(
              context,
              ScaleRoute(
                page: GameInfoPageTablet(selectedGame: "A"),
              ),
            ),
...
                withBorder: true,
                circularity: 10,
              ),
            ),
          ),
          CustomText(
            key: const Key("TabletGameAText"),
            text: AppLocalizations.of(context)!.artist,
            size: 20,
            bold: true,
            italic: true,
            thirdColor: true,
          ),
...
      const SizedBox(
        width: 50,
      ),
      Column(
        children: [
          GestureDetector(
            key: const Key("TabletGameB"),
            onTap: () => Navigator.push(
              context,
              ScaleRoute(
                page: GameInfoPageTablet(selectedGame: "B"),
              ),
            ),
...
                withBorder: true,
                circularity: 10,
              ),
            ),
          ),
          CustomText(
            key: const Key("TabletGameBText"),
            text: AppLocalizations.of(context)!.song,
            size: 20,
            bold: true,
            italic: true,
            thirdColor: true,
          ),
...
      const SizedBox(
        width: 50,
      ),
      Column(
        children: [
          GestureDetector(
            key: const Key("TabletGameC"),
            onTap: () => Navigator.push(
              context,
              ScaleRoute(
                page: GameInfoPageTablet(selectedGame: "C"),
              ),
            ),
...
                withBorder: true,
                circularity: 10,
              ),
            ),
          ),
          CustomText(
            key: const Key("TabletGameCText"),
            text: AppLocalizations.of(context)!.album,
            size: 20,
            bold: true,
            italic: true,
            thirdColor: true,
          ),
...
      const SizedBox(
        width: 50,
      ),
      Column(
        children: [
          GestureDetector(
            key: const Key("TabletGameD"),
            onTap: () => Navigator.push(
              context,
              ScaleRoute(
                page: GameInfoPageTablet(selectedGame: "D"),
              ),
            ),
...
                        Column(
                          children: [
                            Row(
                              mainAxisAlignment: MainAxisAlignment.start,
                              children: [
                                CustomText(
                                  key: const Key("TabletPresentationText"),
                                  text:
                                      AppLocalizations.of(context)!.chooseaquiz,
                                  size: 30.0,
                                  bold: true,
                                ),
                              ],
                            ),
                          ],
                        ),
                        SingleChildScrollView(
                          key: const Key("TabletListGames"),
                          scrollDirection: Axis.horizontal,
                          child: Row(
                            mainAxisAlignment: MainAxisAlignment.start,
                            children: trialGames,
                          ),
                        ),
...
                      height: 50,
                    ),
                    Row(
                      mainAxisAlignment: MainAxisAlignment.start,
                      children: [
                        CustomText(
                          key: const Key("TabletArtistText"),
                          text: AppLocalizations.of(context)!.yourfavartists,
                          size: 30.0,
                          bold: true,
                        ),
                      ],
                    ),
...
                                    ),
                                  );
                                }
                              }

                              return SingleChildScrollView(
                                key: const Key("TabletArtistList"),
                                scrollDirection: Axis.vertical,
                                child: Table(
                                  key: const Key("TabletTableLocalRanking"),
                                  border: TableBorder.symmetric(),
                                  defaultVerticalAlignment:
                                      TableCellVerticalAlignment.middle,
...
